--- a/finalResults.Rmd
+++ b/finalResults.Rmd
@@ -22,7 +22,9 @@ source("salaryBrackets.R")
 ```
 
 #Introduction to Analysis
-Our team conducted an anaylysis to determine how recent LSU Bachelor's degree graduate's past internships affect their starting salary after graduation, if at all. To do this, we created a discrete variable, `salaryBracket`, that divided graduates into three categories: low salary, medium salary, and high salary. The limits for each bracket were calculated using boxplot statistics--anything within the "box" (between the first and third quartile) is considered a "medium" salary, while anything outside of the "box" is labeled "high" or "low". The brackets were calculated using data on all LSU Bachelor's Degree graduates as an aggregate, not by major. Data with salary values of less than `r dollar(mn)` were removed because the national minimum wage in the United States is $7.25 an hour--a full-time position paying minimum wage for the year pays more than `r dollar(mn)`, so all values below this were considered to be typos. Records with a salary under The minimum and maximum for the "medium" salary bracket are `r dollar(quantiles['Q1'])` and `r dollar(quantiles['Q3'])`, respectively.
+Our team conducted an anaylysis to determine how recent LSU Bachelor's degree graduate's past internships affect their starting salary after graduation, if at all. 
+
+To do this, we created a discrete variable, `salaryBracket`, that divided graduates into three categories: low salary, medium salary, and high salary. The limits for each bracket were calculated using boxplot statistics--anything within the "box" (between the first and third quartile) is considered a "medium" salary, while anything outside of the "box" is labeled "high" or "low". The brackets were calculated using data on all LSU Bachelor's Degree graduates as an aggregate, not by major. Data with salary values of less than `r dollar(mn)` were removed because the national minimum wage in the United States is $7.25 an hour--a full-time position paying minimum wage for the year pays more than `r dollar(mn)`, so all values below this were considered to be typos. Records with a salary under The minimum and maximum for the "medium" salary bracket are `r dollar(quantiles['Q1'])` and `r dollar(quantiles['Q3'])`, respectively.
 
 Our original hypothesis inferred that students who had participated in an internship prior to graduation would be amongst those who have a higher starting salary.
 
@@ -34,7 +36,7 @@ We first compared the starting salaries for those accepted full time against 3 d
 * the compensation (paid or unpaid) of the internship they had
 * if the graduate stayed with that company
 
-Then, we broke down the salary performance statistics we found by LSU Majors against that of the national average from a national study conducted by the Wall Street Journal, "Majors That Pay Back".
+Then, we broke down the salary performance statistics we found by LSU Majors against that of the national average from a national study conducted by the Wall Street Journal, "Increase Salary by Major".
 
 \newpage
 #Results
@@ -86,8 +88,6 @@ Internship Number | College | Total Internships
 The total number of students who completed internships were `r percent(length(internGrad$interns)/length(graduation$graduationId))` of the graduating class.
 
 ```{r}
-#INCHAN ^^ Put students who didn't have internships
-
 
 right_join(internship, graduation, by = 'graduationId') %>%
   select(graduationId, internshipId) %>% mutate(interns = !is.na(internshipId)) %>% 
@@ -106,7 +106,7 @@ knitr::kable(yyy)
 
 ```
 According to the graph above, there are `r yyy[2,2]` students who have done internships, and there are `r yyy[1,2]` students who did not have internships.
-#INCHAN ^^ double check that this is working - it didn't work for me - peyton
+
 ```{r]}
 right_join(internship, graduation, by = 'graduationId') %>% 
   select(graduationId, internshipId) %>% mutate(interns = !is.na(internshipId)) %>%
@@ -131,11 +131,11 @@ xxx1Percentage
 ```
 
 The graph and table above represents following informations:
-- There are `r xxx1Percentage[1,2]` students, which is `r xxx1Percentage[1,3]` of total students, have done `r xxx1Percentage[1,1]` internship.
-- There are `r xxx1Percentage[2,2]` students, which is `r xxx1Percentage[2,3]` of total students, have done `r xxx1Percentage[2,1]` internship.
-- There are `r xxx1Percentage[3,2]` students, which is `r xxx1Percentage[3,3]` of total students, have done `r xxx1Percentage[3,1]` internship.
-- There are `r xxx1Percentage[4,2]` students, which is `r xxx1Percentage[4,3]` of total students, have done `r xxx1Percentage[4,1]` internship.
-- There are `r xxx1Percentage[5,2]` students, which is `r xxx1Percentage[5,3]` of total students, have done `r xxx1Percentage[5,1]` internship.
+* There are `r xxx1Percentage[1,2]` students, which is `r xxx1Percentage[1,3]` of total students, have done `r xxx1Percentage[1,1]` internship.
+* There are `r xxx1Percentage[2,2]` students, which is `r xxx1Percentage[2,3]` of total students, have done `r xxx1Percentage[2,1]` internship.
+* There are `r xxx1Percentage[3,2]` students, which is `r xxx1Percentage[3,3]` of total students, have done `r xxx1Percentage[3,1]` internship.
+* There are `r xxx1Percentage[4,2]` students, which is `r xxx1Percentage[4,3]` of total students, have done `r xxx1Percentage[4,1]` internship.
+* There are `r xxx1Percentage[5,2]` students, which is `r xxx1Percentage[5,3]` of total students, have done `r xxx1Percentage[5,1]` internship.
 
 ```{r}
 xxx %>% collect() %>%  right_join(yy, by = "graduationId") %>% count(interns, salaryBracket) -> xxx2
@@ -149,8 +149,6 @@ xxx %>% collect() %>%  right_join(yy, by = "graduationId") %>%
   guides(fill = guide_legend(title = "Salary Bracket"))
 
 
-
-
 xxx %>% collect() %>%  right_join(yy, by = "graduationId") %>% count(interns, salaryBracket) %>% filter(interns == 0) %>% mutate(percentage = percent((n)/sum(n))) -> xxxFor0
 xxx %>% collect() %>%  right_join(yy, by = "graduationId") %>% count(interns, salaryBracket) %>% filter(interns == 1) %>% mutate(percentage = percent((n)/sum(n))) -> xxxFor1
 xxx %>% collect() %>%  right_join(yy, by = "graduationId") %>% count(interns, salaryBracket) %>% filter(interns == 2) %>% mutate(percentage = percent((n)/sum(n))) -> xxxFor2
@@ -158,16 +156,13 @@ xxx %>% collect() %>%  right_join(yy, by = "graduationId") %>% count(interns, sa
 xxx %>% collect() %>%  right_join(yy, by = "graduationId") %>% count(interns, salaryBracket) %>% filter(interns == 4) %>% mutate(percentage = percent((n)/sum(n))) -> xxxFor4
 
 rbind(xxxFor0, xxxFor1, xxxFor2, xxxFor3, xxxFor4) -> finalXxx
+finalXxx
 
-
-#INCHAN narrative below
 ```
 
 This graph tells us that students with more internships have less low salary fraction than students with no internship experience.
 
-
-[Inchan Narrative]
-
+\newpage
 ###Paid or Unpaid Internships
 ```{r}
 
@@ -194,40 +189,42 @@ ty <- oo %>% filter(internshipPaid== "yes")
 ```
 As noted, `r length(unique(intern1$graduationId))` graduates had internships while completing their degree.  
 
-From this number there is a total of `r oo[1,2]` unpaid internships, and `r oo[2,2]` paid internships taken by students that graduated in 2017.  
+From this number there is a total of `r oo[1,2]` unpaid internships, and `r oo[2,2]` paid internships taken by students.  
 
-In this analysis we will find out about the correlation between paid and unpaid internship on the starting salaries for graduated students in 2017.  
+In this analysis we will find out about the correlation between paid and unpaid internship on the starting salaries.  
 
 ```{r}
 paidcol <- tbl(conStudent,'internship') %>% inner_join(tbl(conStudent,'graduation')) %>% select(graduationId,jobTitle,internshipPaid)%>% count(internshipPaid) %>% 
   filter(!is.na(internshipPaid)) %>% collect() %>% 
   ggplot()+
-  geom_col(aes(internshipPaid, n), fill = 'purple')
+  geom_col(aes(internshipPaid, n), fill = 'purple') +
+  ggtitle( label = "Paid vs Unpaid Internship")
 paidcol
-
-#ADMIR NEED TITLE and AXIS TITLES
 
 ```
 
 ```{r}
 kk <- paid %>% collect() %>% right_join(yy, by = "graduationId") %>%  filter(!is.na(internshipPaid)) %>% select(salaryBracket, internshipPaid) %>% count(salaryBracket, internshipPaid)%>% mutate(percentage = percent(round(n/2099, digits = 3)))
 
-```
+paidbar <- paid %>% collect() %>% right_join(yy, by = "graduationId") %>%  filter(!is.na(internshipPaid)) %>% 
+  ggplot() + 
+  geom_bar(aes(x = internshipPaid, fill = salaryBracket), position = "dodge") + 
+  scale_fill_discrete(guide_legend(title = "Salary Bracket")) +
+  ggtitle(label = "Paid vs Unpaid Internship with Salary Bracket")
+paidbar
 
+```
 From the dataset we found out that `r sum(kk$n)` get a job right after graduation. The distribution based on the salary bracket is :
 
-* `r kk[1,3]` graduates with unpaid internships, and `r kk[2,3]` graduates with paid internships got high starting salaries.
-* `r kk[5,3]` graduates with unpaid internship, and `r kk[6,3]` graduates with paid internship got medium starting salaries.
-* `r kk[3,3]` graduates with unpaid internship, and `r kk[4,3]` graduates with paid internship got low starting salaries.
+* `r kk[5,3]` graduates with unpaid internships, and `r kk[6,3]` graduates with paid internships got high starting salaries.
+* `r kk[3,3]` graduates with unpaid internship, and `r kk[4,3]` graduates with paid internship got medium starting salaries.
+* `r kk[1,3]` graduates with unpaid internship, and `r kk[2,3]` graduates with paid internship got low starting salaries.
 
-```{r}
-paidbar <- paid %>% collect() %>% right_join(yy, by = "graduationId") %>%  filter(!is.na(internshipPaid)) %>% 
-  ggplot() + geom_bar(aes(x = internshipPaid, fill = salaryBracket), position = "dodge") + scale_fill_discrete(guide_legend(title = "Salary Bracket")) 
-paidbar
-```
+
 
 Based on data and graph above we can conclude that paid internship have highly positive correlation on starting salary with the highest percentage of `r kk[4,4]` for medium starting salary, and second highest of `r kk[6,4]` for high starting salary, together making up more than half of those having an internship. 
 
+\newpage
 ###Internship Turnovers
 
 In the following analysis, we compared interns who took a full-time position with the same company versus those who took a full-time position at a new company. We filtered out any graduate who did not have a company listed for both their internship and full-time position.
@@ -279,6 +276,8 @@ Employment Company | Total | Percent of Full Time | Salary Total | Salary Averag
 -------------------| ------ |--------------- | --------------- | ---------------
 Same Company | `r length(stayed$organizationId)` | `r  percent(length(stayed$organizationId)/length(fulltime$idCurrentPosition))` | `r dollar(sum(ftstay))` | `r dollar(sum(ftstay))` | `r dollar(sum(ftstay)/length(ftstay$salary))`
 New Company | `r length(newco$organizationId)` |  `r  percent(length(newco$organizationId)/length(fulltime$idCurrentPosition))` | `r dollar(sum(ftnew))` | `r dollar(sum(ftnew)/length(ftnew$salary))`
+
+\newpage
 ###How LSU Graduates Stack Up
 To put everything in perspective, we wanted to compare the starting salaries of LSU graduates to that of the average college graduate in the US. To do this, we used a dataset from *The Wall Street Journal* (WSJ) that included the median starting salaries of college graduates by major: http://online.wsj.com/public/resources/documents/info-Degrees_that_Pay_you_Back-sort.html.  
 Of the `r nrow(kaggle)` majors listed in the WSJ dataset, only `r nrow(kaggle) - nrow(notIn)` matched up with the majors of the LSU graduates who went into the workforce after graduation. Some of the major names had to be adjusted to match up properly to the WSJ dataset.  
@@ -361,3 +360,9 @@ Economics | Business
 ![College of Music & Dramatic Arts](plots/boxMusicDramaticArts.png)
 
 ![College of Science](plots/boxScience.png)
+
+
+
+/new page 
+#Work Cited
+PayScale Inc, & Wall Street Journal. (n.d.). Salary Increase by Major. Retrieved April 20, 2018, from http://online.wsj.com/public/resources/documents/info-Degrees_that_Pay_you_Back-sort.html
